[tool.poetry]
name = "flask-async"
version = "0.1.0"
description = ""
authors = ["Marco Richetta <marcorichetta@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_async"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = {extras = ["async"], version = "^2.2.2"}
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
quart = "^0.18.3"
hypercorn = {extras = ["uvloop"], version = "^0.14.3"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
